--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-router": "^6.22.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
     "typescript": "^4.9.5",
