--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "d3": "^7.8.5",
+    "math.js": "^1.1.46",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
