--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
-    "d3": "^7.8.5",
+    "d3": "^7.9.0",
+    "geojson": "^0.5.0",
     "math.js": "^1.1.46",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
